--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tw-eth-cli",
-  "version": "1.0.1",
-  "description": "a simple cli tool for eth like blockchain ",
+  "version": "1.0.2",
+  "description": "a simple cli tool for eth,quorum ",
   "main": "./src/index.js",
   "bin": {
     "tw-eth-cli": "./src/index.js"
@@ -27,6 +27,7 @@
   "dependencies": {
     "abi-decoder": "^2.3.0",
     "commander": "^5.1.0",
+    "untildify": "^4.0.0",
     "web3": "^1.2.9"
   },
   "devDependencies": {
