--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tw-eth-cli",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "a simple cli tool for eth,quorum ",
   "main": "./src/index.js",
   "bin": {
@@ -27,6 +27,7 @@
   "dependencies": {
     "abi-decoder": "^2.3.0",
     "commander": "^5.1.0",
+    "ethers": "^4.0.46",
     "untildify": "^4.0.0",
     "web3": "^1.2.9"
   },
